<resources>
    <string name="app_name">DashWeather</string>
    <string name="extension_description">Display the weather of your current location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">DashWeather Settings</string>
    <string name="high_low">High: %s, Low: %s</string>
    <string name="high_low_invert">Low: %s, High: %s</string>
    <string name="temp_F">%d&#176;F</string>
    <string name="temp_C">%d&#176;C</string>
    <string name="humidity">Humidity: %d</string>
    <string name="uv_index">UV Index: %d</string>
    <string name="permission_title">Permission Needed</string>
    <string name="permission_body">Location permission is required</string>
    <string name="error_no_location">Location not found</string>
    <string name="error_no_location_desc">Unable to determine your location</string>

    <!-- Prefernces -->
    <string name="preference_cat_general">General</string>
    <string name="preference_use_imperial">Use Imperial Units</string>
    <string name="preference_imperial_on">Temperatures will be shown as 65&#176;F</string>
    <string name="preference_imperial_off">Temperatures will be shown as 18&#176;C</string>
    <string name="preference_update_frequency">Update Frequency</string>
    <string-array name="preference_update_frequency_values">
        <item>No limit</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string name="preference_cat_permissions">Permissions</string>
    <string name="preference_permission">Location Permission</string>
    <string name="preference_permission_granted">Permission granted</string>
    <string name="preference_permission_declined">Permission not granted</string>
    <string name="preference_cat_appearance">Appearance</string>
    <string name="preference_weather_details">Weather Details</string>
    <string-array name="preference_weather_detail_items">
        <item>High/Low temperature</item>
        <item>UV index</item>
        <item>Humidity percentage</item>
        <item>Location</item>
    </string-array>
    <string name="preference_high_low_invert">Invert High/Low Temperatures</string>
    <string name="preference_cat_about">About</string>
    <string name="preference_powered_by">Powered by Dark Sky</string>
    <string name="preference_version">Version</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
