<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_cat_general">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/pref_key_use_imperial"
            android:title="@string/preference_use_imperial"
            android:summaryOn="@string/preference_imperial_on"
            android:summaryOff="@string/preference_imperial_off"
            android:defaultValue="true" />

        <android.support.v7.preference.ListPreference
            android:key="@string/pref_key_update_frequency"
            android:title="@string/preference_update_frequency"
            android:entries="@array/preference_update_frequency_values"
            android:entryValues="@array/pref_key_update_frequency_values" />
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>